k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: petclinic:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 8085
