k8s/petclinic-metrics-green-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-metrics-green
spec:
  ports:
    - name: http
      port: 8085
      targetPort: 8085
  selector:
    app: petclinic
    version: green
