k8s/service-metrics-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-metrics-green
  namespace: default
  labels:
    app.kubernetes.io/name: petclinic
    app.kubernetes.io/instance: petclinic-green
spec:
  selector:
    app.kubernetes.io/name: petclinic
    app.kubernetes.io/instance: petclinic-green
  ports:
    - name: http
      port: 8085
      targetPort: 8085
